# ASTRO527

./: .gitignore  README.md  figures.mplstyle  hw1.py  pyproject.toml
hw1/: argparser.py  root_finder.py  simulation.py  visualize.py
hw1_outputs/: lagrange_points_M1.0_m3e-06.txt  lagrange_points_M100.0_m1.0.txt  lagrange_points_M3.0_m1.0.txt
