[tool.poetry]
name = "hw-python"
version = "0.1.0"
description = "Repo for holding HW code for ASTRO527"
authors = ["Kadri <knizam@psu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
